[package]
name = "roslibrust_ros2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
zenoh = "1.7"
zenoh-buffers = "1.7"
tokio = { workspace = true }
env_logger = "0.11"
cdr = "0.2"
roslibrust_common = { path = "../roslibrust_common", version = "0.20" }
anyhow = "1.0"
# Experimental "raw ros" library, we're going to try to build on top of
ros-z = { path = "/home/circle/Workings/ZettaScale/zenoh-ws/project/nix-ros/src/worktree-ros-z/serdes-param/crates/ros-z", features = ["jazzy"] }
log = "0.4"
# Used for cancellation token
tokio-util = "0.7"
# Needed for now because of ros-z type incompatibility
serde = { workspace = true }

[dev-dependencies]
roslibrust_test = { path = "../roslibrust_test" }

[features]
# Used to enable tests that rely on a locally running ros2 rmw_zenohd
ros2_zenoh_test = []
