<?xml version="1.0"?>
<package format="2">
  <name>roslibrust_cpp_image_bench</name>
  <version>0.1.0</version>
  <description>ROS1 roscpp image roundtrip benchmark comparable to roslibrust_test image_bench.</description>

  <maintainer email="carterjschultz@gmail.com">Carter Schultz</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
